--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,5 @@ dependencies {
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
-    implementation "com.google.android.material:material:$supportlibVersion"
+    //implementation "com.google.android.material:material:$version_navigation"
 }
